# kuber

./: Cargo.toml  Dockerfile  Dockerfile_1  README.md
src/: cli.rs  kube_api.rs  main.rs  path_parser.rs
