[package]
name = "kuber"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.87.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.7"
lazy_static = "1.4.0"

[[bin]]
name = "kuber" # 빌드될 바이너리 이름
path = "src/main.rs" # 실제 main.rs 파일의 경로